# easyrpg-savegame-manager-web

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  games.ini  make_linux.sh  make_web.sh
src/: main.cpp
